--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,9 +50,9 @@
 
     <%= yield %>
 
-    <footer class="text-center text-xs mt-auto md:flex justify-center gap-2">
-      <p>&copy;2025 Counterspell Games LLC, all rights reserved.</p>
-      <nav class="flex gap-1.5">
+    <footer class="text-center text-xs mt-auto flex max-sm:flex-col justify-center items-center gap-2">
+      <p class="text-balance">&copy;2025 Counterspell Games LLC, all rights reserved.</p>
+      <nav class="flex justify-center items-center gap-1.5">
         <% Page.all.each do |t| %>
           <%= link_to t.title, page_path(t) %>
         <% end %>
