--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,26 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <!-- HTML Meta Tags -->
+    <meta name="description" content="Play table top adventures irl, whether you're a complete beginner or new to the hobby, there's a place in our world for you.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://counterspell.games">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Counterspell Games">
+    <meta property="og:description" content="Play table top adventures irl, whether you're a complete beginner or new to the hobby, there's a place in our world for you.">
+    <meta property="og:image" content="https://counterspell.games/og-image.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="counterspell.games">
+    <meta property="twitter:url" content="https://counterspell.games">
+    <meta name="twitter:title" content="Counterspell Games">
+    <meta name="twitter:description" content="Play table top adventures irl, whether you're a complete beginner or new to the hobby, there's a place in our world for you.">
+    <meta name="twitter:image" content="https://counterspell.games/og-image.jpg">
+
+
+
     <%= yield :head %>
 
     <%# Enable PWA manifest for installable apps (make sure to enable in config/routes.rb too!) %>
@@ -38,7 +58,7 @@
       <% if authenticated? %>
         <nav class="justify-self-end flex gap-4">
           <%= link_to "Admin Dash", dashboard_path if Current.user.admin? %>
-          <%= link_to "Profile", edit_user_path(Current.user) %>
+          <%= link_to "Preferences", edit_user_path(Current.user) %>
           <%= button_to "Logout", session_path, method: :delete, class: "inline link" %>
         </nav>
       <% end %>
