fix new tab for analytics

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -14,7 +14,7 @@
     <section>
       <h2 class="font-bold text-2xl mb-4">Site</h2>
       <nav class="space-y-2 *:block">
-        <a href="https://counterspell.pirsch.io/?access=PiJasRxAxTSZn6FBk2wC" target="_blank">Analytics</a>
+        <a href="https://counterspell.pirsch.io/?access=PiJasRxAxTSZn6FBk2wC" target="_blank" rel="noopener">Analytics</a>
       </nav>
     </section>
   </div>
