--- a/app/views/traits/_form.html.erb
+++ b/app/views/traits/_form.html.erb
@@ -26,6 +26,12 @@
     <%= form.text_field :name %>
   </div>
 
+
+  <div class="my-5">
+    <%= form.label :description %>
+    <%= form.rich_text_area :description, toolbar: false %>
+  </div>
+
   <div class="my-5" data-controller="abilities-editor" data-abilities="<%= trait.abilities.to_json %>">
     <%= form.label :abilities %>
 
