--- a/app/views/traits/index.html.erb
+++ b/app/views/traits/index.html.erb
@@ -10,13 +10,24 @@
     <%= link_to "New trait", new_trait_path, class: "rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white block font-medium" %>
   </div>
 
-  <div id="traits">
+  <div id="traits" class="container mx-auto">
     <% if @traits.any? %>
       <% @traits.group_by(&:type).sort.each do |trait_type, traits_of_type| %>
         <h2 class="p-4 font-bold text-4xl border-b border-black/20 mb-8 mt-8"><%= trait_type.titleize.pluralize %></h2>
 
-        <ul class="flex flex-wrap gap-4 justify-center">
-          <%= render traits_of_type %>
+        <ul class="grid grid-cols-4 gap-6">
+
+          <% traits_of_type.each do |trait| %>
+            <li class="rounded-xl bg-amber-100">
+              <nav class="flex gap-2 px-2 py-1 opacity-50">
+                <%= link_to "Edit", edit_trait_path(trait) %>
+                <%= link_to "View", trait_path(trait) %>
+              </nav>
+
+              <%= render trait %>
+            </li>
+          <% end %>
+
         </ul>
       <% end %>
     <% else %>
