--- a/app/views/traits/_trait.html.erb
+++ b/app/views/traits/_trait.html.erb
@@ -1,8 +1,8 @@
 <article id="<%= dom_id trait %>" class="rounded-2xl bg-white border-black/20 shadow w-full aspect-[4/6] flex flex-col overflow-clip">
   <header class="flex-[2] flex flex-col justify-end bg-stone-200">
-    <div class="flex justify-between items-end px-3 py-1">
+    <div class="flex justify-between items-start md:items-end px-3 py-1 max-sm:flex-col">
       <h3 class="text-left font-semibold text-2xl text-balance"><%= trait.name %></h3>
-      <p class="text-xs font-bold inline-block rounded px-1 py-px bg-yellow-500 my-1"><%= trait.type %></p>
+      <p class="text-xs font-bold inline-block rounded px-1 py-px bg-yellow-500 my-1 max-sm:-order-1"><%= trait.type %></p>
     </div>
   </header>
 
