--- a/app/views/heroes/_hero.html.erb
+++ b/app/views/heroes/_hero.html.erb
@@ -1,5 +1,6 @@
 <div id="<%= dom_id hero %>" class="space-y-3">
   <div>
+    <%= image_tag(url_for(hero.portrait)) if hero.portrait.present? %>
     <h3 class="font-semibold text-lg text-gray-900"><%= hero.name %></h3>
     <p class="text-sm text-gray-600 mt-1"><%= hero.pronouns %> • <%= hero.role.humanize %></p>
     <%= hero.summary %>
