--- a/app/views/traits/_trait.html.erb
+++ b/app/views/traits/_trait.html.erb
@@ -1,19 +1,19 @@
-<article id="<%= dom_id trait %>" class="rounded-2xl bg-white border-black/20 shadow w-full max-w-[3in] aspect-[4/6] flex flex-col overflow-clip">
-  <header class="flex-[2] flex flex-col justify-end bg-stone-200 bg-cover bg-center">
-    <div class="flex justify-between items-start md:items-end px-3 py-1 max-sm:flex-col">
-      <h3 class="text-left font-semibold text-2xl text-balance"><%= trait.name %></h3>
-      <p class="text-xs font-bold inline-block rounded px-1 py-px bg-yellow-500 my-1 max-sm:-order-1"><%= trait.type %></p>
+<article id="<%= dom_id trait %>" class="flex flex-col bg-white shadow border-black/20 rounded-2xl w-full max-w-[3in] aspect-[4/6] overflow-clip">
+  <header class="flex flex-col flex-[2] justify-end bg-stone-200 bg-cover bg-center">
+    <div class="flex max-sm:flex-col justify-between items-start md:items-end px-3 py-1">
+      <h3 class="font-semibold text-2xl text-left text-balance"><%= trait.name %></h3>
+      <p class="inline-block max-sm:-order-1 bg-yellow-500 my-1 px-1 py-px rounded font-bold text-xs"><%= trait.type %></p>
     </div>
   </header>
 
-  <div class="p-3 flex-[3] flex flex-col gap-4 text-left text-sm">
-    <p class="italic text-pretty leading-snug font-light"><%= trait.description %></p>
+  <div class="flex flex-col flex-[3] gap-4 p-3 text-sm text-left">
+    <p class="font-light italic text-pretty leading-snug"><%= trait.description %></p>
 
     <% if trait.abilities.present? && trait.abilities.any? %>
       <ul class="space-y-2 text-xs">
           <% trait.abilities.each do |name, description| %>
             <li>
-              <strong class="font-black uppercase text-[0.8em]"><%= name %>:</strong> <%= description %>
+              <strong class="font-black text-[0.8em] uppercase"><%= name %>:</strong> <%= description %>
             </li>
           <% end %>
       </ul>
