--- a/app/views/traits/_trait.html.erb
+++ b/app/views/traits/_trait.html.erb
@@ -1,4 +1,4 @@
-<article id="<%= dom_id trait %>" class="flex flex-col bg-white shadow border-black/20 rounded-2xl w-full max-w-[3in] aspect-[4/6] overflow-clip">
+<article id="<%= dom_id trait %>" class="flex flex-col bg-white shadow border-black/20 rounded-2xl w-full max-w-[3in] aspect-[4/6] overflow-clip [corner-shape:squircle]">
   <header class="flex flex-col flex-[2] justify-end bg-stone-200 bg-cover bg-center">
     <div class="flex max-sm:flex-col justify-between items-start md:items-end px-3 py-1">
       <h3 class="font-semibold text-2xl text-left text-balance"><%= trait.name %></h3>
