fix traits, improve cards, refine GM permissions

--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -6,7 +6,7 @@
       <h2 class="font-bold text-2xl mb-4">Content</h2>
       <nav class="space-y-2 *:block">
         <%= link_to "Heroes", heroes_path %>
-        <%= link_to "Traits", traits_path %>
+        <%= link_to "Traits", dashboard_traits_path %>
         <%= link_to "Pages", pages_path %>
       </nav>
     </section>
